# pillar_web

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
crates/flow-auth/: Cargo.toml
crates/flow-auth/src/: lib.rs
crates/flow-auth/src/agent/: client.rs  config.rs  mod.rs
crates/flow-auth/src/components/: auth.rs  authenticated.rs  mod.rs  no_authenticated.rs
crates/flow-auth/src/context/: agent.rs  mod.rs
crates/flow-tauri/: Cargo.toml  tauri.conf.json
crates/flow-wasm/: Cargo.toml  Trunk.toml  index.html  package.json
crates/flow-wasm/assets/: style.scss
crates/flow-wasm/assets/scss/: style.scss
crates/flow-wasm/src/: error.rs  main.rs
crates/flow-wasm/src/app/: mod.rs
crates/flow-wasm/src/app/about/: mod.rs
crates/flow-wasm/src/app/auth/: mod.rs
crates/flow-wasm/src/app/home/: banner.rs  mod.rs
crates/flow-wasm/src/app/user/: register.rs  signup.rs
crates/flow-wasm/src/components/: about_bullseye.rs  footer.rs  header.rs  mod.rs  navigation.rs  theme_switch.rs  tools_toolbar.rs  user_context_provider.rs  user_dropdown.rs
crates/flow-wasm/src/hooks/: mod.rs  use_user_context.rs
crates/flow-wasm/src/services/: mod.rs  requests.rs  user.rs
crates/flow-wasm/src/types/: auth.rs  mod.rs
crates/flow-wasm/tests/: web.rs
crates/flow_api/: Cargo.toml
crates/flow_api/src/: lib.rs
crates/flow_api/src/api/: client.rs  error.rs  state.rs
crates/flow_api/src/components/: api.rs  authenticated.rs  mod.rs  no_authenticated.rs
crates/flow_api/src/context/: auth.rs  client.rs  mod.rs
crates/flow_api/src/hooks/: use_auth.rs  use_client.rs
crates/flow_api/src/router/: authenticated_switch.rs  no_authenticated_switch.rs
crates/flow_api/src/services/: auth.rs  mod.rs  user.rs
crates/flow_api/src/types/: auth.rs  mod.rs
crates/flow_tauri/: tauri.conf.json
crates/flow_wasm/: Cargo.toml  index.html  package.json
crates/flow_wasm/src/: lib.rs
crates/flow_wasm/src/app/: about.rs  account.rs  app.rs  mod.rs  page.rs  toolbar.rs
crates/flow_wasm/src/app/auth/: forgot_password.rs  login.rs  mod.rs  password_recovery.rs  signup.rs
crates/flow_wasm/src/app/index/: index.rs
crates/flow_wasm/src/app/user/: login.rs  mod.rs  password_recovery.rs  signup.rs
crates/flow_wasm/src/components/: about_dropdown.rs  app_page.rs
crates/flow_wasm/src/hooks/: mod.rs  use_router.rs
crates/flow_wasm/src/route/: mod.rs  user.rs
crates/flow_wasm/src/routes/: app.rs  auth.rs  mod.rs  user.rs
crates/flow_wasm/src/types/: mod.rs  user.rs
crates/flow_wasm/src/validators/: email.rs  mod.rs
crates/pillar_api/: Cargo.toml
crates/pillar_api/src/: lib.rs
crates/pillar_api/src/api/: config.rs  mod.rs  state.rs
crates/pillar_api/src/components/: error.rs
crates/pillar_api/src/context/: client.rs
crates/pillar_api/src/hooks/: mod.rs  use_client.rs
crates/pillar_api/src/router/: mod.rs
crates/pillar_api/src/services/: mod.rs  user.rs
crates/pillar_api/src/types/: error.rs  pagination.rs  user.rs
crates/pillar_tauri/: Cargo.toml  tauri.conf.json
crates/pillar_wasm/: Cargo.toml  index.html
crates/pillar_wasm/src/: main.rs
crates/pillar_wasm/src/app/: about.rs  account.rs  app.rs  mod.rs  navigation.rs  page.rs
crates/pillar_wasm/src/app/auth/: forgot_password.rs  login.rs  mod.rs  password_recovery.rs  signup.rs
crates/pillar_wasm/src/app/index/: mod.rs
crates/pillar_wasm/src/components/: mod.rs
crates/pillar_wasm/src/routes/: app.rs  mod.rs
crates/pillar_wasm/src/validators/: email.rs  password.rs  username.rs
