[package]
authors = ["Adam Minge <minge.adam@gmail.com>"]
edition = "2021"
license = "Apache-2.0/MIT"
name = "flow-auth"
version = "0.1.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1"
thiserror = "1"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yew-hooks = "0.3.0"
yew-more-hooks = { version = "0.3.0", features = ["yew-hooks"] }
yew-nested-router = "0.4"
