[package]
authors = ["Adam Minge <minge.adam@gmail.com>"]
categories = ["wasm"]
description = "."
edition = "2021"
license = "Apache-2.0/MIT"
name = "flow-wasm"
repository = "https://github.com/AdamMinge/egnite_web"
version = "0.1.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dotenv_codegen = "0.15.0"
gloo = "0.10"
lazy_static = "1.4.0"
log = "0.4"
parking_lot = "0.12.1"
pulldown-cmark = "0.9.3"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1"
thiserror = "1"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yew-hooks = "0.3.0"
wasm-bindgen = "0.2"
wasm-logger = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Node",
  "Window",
  "HtmlCollection",
  "HtmlInputElement",
]

[dev-dependencies]
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
gloo-utils = "0.2.0"
