[package]
authors = ["Adam Minge <minge.adam@gmail.com>"]
edition = "2021"
license = "Apache-2.0/MIT"
name = "flow-api"
version = "0.1.0"

[dependencies]
gloo = "0.10.0"
gloo-timers = "0.3.0"
gloo-storage = "0.3.0"
log = "0.4.0"
num-traits = "0.2.18"
async-recursion = "1.0.5"
tokio = { version = "1.36.0", features = ["sync"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.0"
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.0"
wasm-bindgen-futures = "0.4.41"
js-sys = "0.3"
thiserror = "1.0.0"
http = "1.0.0"
url = "2.5.0"
