[package]
authors = ["Adam Minge <minge.adam@gmail.com>"]
edition = "2021"
license = "Apache-2.0/MIT"
name = "flow-api"
version = "0.1.0"

[dependencies]
gloo = "0.10.0"
gloo-storage = "0.3.0"
tokio = { version = "1.36.0", features = ["sync"] }
reqwest = { version = "0.11.22", features = ["json"] }
chrono = { version = "0.4.35", features = ["serde"] }
url = { version = "2.5.0", features = ["serde"] }
serde = "1.0.0"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yew-hooks = "0.3.0"
thiserror = "1.0.0"
uuid = "1.7.0"
log = "0.4.21"
