[package]
authors = ["Adam Minge <minge.adam@gmail.com>"]
description = """
Web application for distribution of Flow application.
"""
edition = "2021"
license = "Apache-2.0/MIT"
name = "flow-wasm"
version = "0.1.0"

[dependencies]
flow-api = { path = "../flow_api" }

url = "2.5.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv_codegen = "0.15.0"
gloo = "0.10"
gloo-utils = "0.2"
gloo-timers = "0.3"
gloo-storage = "0.3"
lazy_static = "1.4.0"
log = "0.4"
patternfly-yew = { version = "0.5.2", features = [
  "tree",
  "dual_list_selector",
  "icons-fab",
  "search_input",
] }
num-traits = "0.2.18"
tokio = { version = "1.36", features = ["sync"] }
parking_lot = "0.12.1"
pulldown-cmark = "0.9.3"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1"
thiserror = "1"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yew-hooks = "0.3.0"
yew-more-hooks = { version = "0.3.0", features = ["yew-hooks"] }
yew-nested-router = "0.4"
wasm-bindgen-futures = "0.4.41"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
uuid = "1.6.1"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Node",
  "Window",
  "HtmlCollection",
  "HtmlInputElement",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
