[package]
authors = ["Adam Minge <minge.adam@gmail.com>"]
description = """
Web application for distribution of Flow application.
"""
edition = "2021"
license = "Apache-2.0/MIT"
name = "flow-wasm"
version = "0.1.0"

[dependencies]
flow-api = { path = "../flow_api" }

dotenv_codegen = "0.15.0"
gloo = "0.10.0"
gloo-utils = "0.2.0"
gloo-timers = "0.3.0"
gloo-storage = "0.3.0"
patternfly-yew = { version = "0.5.2", features = [
  "tree",
  "dual_list_selector",
  "icons-fab",
  "search_input",
] }
tokio = { version = "1.36.0", features = ["sync"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.0"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yew-hooks = "0.3.0"
yew-more-hooks = { version = "0.3.0", features = ["yew-hooks"] }
wasm-bindgen-futures = "0.4.41"
wasm-bindgen = "0.2.0"
wasm-logger = "0.2.0"
js-sys = "0.3.0"
regex = "1.10.3"
url = "2.5.0"
log = "0.4.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Node",
  "Window",
  "HtmlCollection",
  "HtmlInputElement",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
