[package]
authors = ["Adam Minge <minge.adam@gmail.com>"]
edition = "2021"
name = "pillar-tauri"
version = "0.1.0"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4", features = ["api-all"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
